--- a/src/css/todos.css
+++ b/src/css/todos.css
@@ -5,10 +5,10 @@ body {
 }
 
 body {
-    font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font: 14px monospace, 'Helvetica Neue', Helvetica, Arial, sans-serif;
     line-height: 1.4em;
     background: #eeeeee;
-    color: #333333;
+    color: #255d92;
     width: 520px;
     margin: 0 auto;
     -webkit-font-smoothing: antialiased;
@@ -17,21 +17,14 @@ body {
 #todoapp {
     background: #fff;
     padding: 20px;
+    margin-top: 20px;
     margin-bottom: 40px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
-    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
-    -ms-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
-    -o-box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
     box-shadow: rgba(0, 0, 0, 0.2) 0 2px 6px 0;
-    -webkit-border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -ms-border-radius: 0 0 5px 5px;
-    -o-border-radius: 0 0 5px 5px;
-    border-radius: 0 0 5px 5px;
+    border-radius: 5px;
 }
 
 #todoapp h1 {
-    font-size: 36px;
+    font-size: 2rem;
     font-weight: bold;
     text-align: center;
     padding: 0 0 10px 0;
@@ -39,17 +32,14 @@ body {
 
 #todoapp input[type='text'] {
     width: 466px;
-    font-size: 24px;
+    font-size: 1.15rem;
     font-family: inherit;
     line-height: 1.4em;
     border: 0;
     outline: none;
     padding: 6px;
-    border: 1px solid #999999;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    -ms-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
-    -o-box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
+    border: 1px solid #cecaca;
+    border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.2) 0 1px 2px 0 inset;
 }
 
@@ -70,7 +60,7 @@ body {
 #todo-list li {
     padding: 18px 20px 18px 0;
     position: relative;
-    font-size: 24px;
+    font-size: 1.15rem;
     border-bottom: 1px solid #cccccc;
 }
 
@@ -140,10 +130,6 @@ body {
     border-top: 1px solid #ededed;
     padding: 0 20px;
     line-height: 37px;
-    -webkit-border-radius: 0 0 5px 5px;
-    -moz-border-radius: 0 0 5px 5px;
-    -ms-border-radius: 0 0 5px 5px;
-    -o-border-radius: 0 0 5px 5px;
     border-radius: 0 0 5px 5px;
 }
 
@@ -158,24 +144,12 @@ body {
     margin-bottom: 8px;
     padding: 0 10px 1px;
     cursor: pointer;
-    -webkit-border-radius: 12px;
-    -moz-border-radius: 12px;
-    -ms-border-radius: 12px;
-    -o-border-radius: 12px;
     border-radius: 12px;
-    -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-    -moz-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-    -ms-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
-    -o-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
     box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 0;
 }
 
 #clear-completed:hover {
     background: rgba(0, 0, 0, 0.15);
-    -webkit-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-    -moz-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-    -ms-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
-    -o-box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
     box-shadow: rgba(0, 0, 0, 0.3) 0 -1px 0 0;
 }
 
